[tool.poetry]
name = "hue-color-converter"
version = "0.1.0"
description = ""
authors = ["Zachary Juang <zachary822@me.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "hue_color_converter"}]

[tool.poetry.dependencies]
python = "^3.10"
Shapely = "^1.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
