[tool.poetry]
name = "hue-color-converter"
version = "0.2.1"
description = ""
authors = ["Zachary Juang <zachary822@me.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "hue_color_converter"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
Shapely = "^1.8.4"
numpy = "^1.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
