[tool.poetry]
name = "hue-color-converter"
version = "0.2.4"
description = "color converter for philips hue"
authors = ["Zachary Juang <zachary822@me.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "hue_color_converter"}]

[tool.poetry.urls]
repository = "https://github.com/zachary822/hue_color_converter"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
Shapely = "^2.0.1"
numpy = "^1.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
